--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="./css/style.css">
-    <title> Santos Seguros </title>
+    <title> Inicio Sesión </title>
 </head>
 <body>
-    <h1>Cotizador de Autos</h1>
+    <h1>Iniciar Sesión</h1>
+    <form>
+      <label for="username">Nombre de usuario:</label>
+      <input type="text" id="username" name="username">
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" name="password">
+      <button type="submit" id="loginButton">Iniciar Sesión</button>
+    </form>
+    <p>¿No tenés cuenta? <a href="./pages/registro.html">Regístrate</a></p>
 
-
-    <script src="./js/main.js"></script>   
+    <script src="./js/inicio.js"></script>   
 </body>
 </html>
