--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       <input type="text" id="username" name="username">
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password">
+      <div class="check">
+        <label for="check">Recordar</label>
+        <input type="checkbox" id="check">
+        <p id="message"></p>
+       </div>
       <button type="submit" id="loginButton">Iniciar Sesión</button>
     </form>
     <p>¿No tenés cuenta? <a href="./pages/registro.html">Regístrate</a></p>
