--- a/pages/registro.html
+++ b/pages/registro.html
@@ -9,14 +9,14 @@
     <title>Registro</title>
 </head>
 <body>
-<form>
+<form id="form-register" >
     <label for="username">Nombre de usuario:</label>
-    <input type="text" id="username" name="username">
+    <input type="text" id="usernameR" name="username">
     <label for="email">Correo electrónico:</label>
     <input type="email" id="email" name="email">
     <label for="password">Contraseña:</label>
-    <input type="password" id="password" name="password">
-    <button type="submit">Registrarse</button>
+    <input type="password" id="passwordR" name="password">
+    <button type="submit" id="regisButton" >Registrarse</button>
   </form>
   <p>Ya tenés una cuenta? <a id="login-link" href="../index.html">Inicia sesión aquí</a></p>
 
