modificaciones para la entrega del proyecto final

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <div class="check">
         <label for="check">Recordar</label>
         <input type="checkbox" id="check">
-        <p id="message"></p>
        </div>
       <button type="submit" id="loginButton">Iniciar Sesión</button>
     </form>
     <p>¿No tenés cuenta? <a href="./pages/registro.html">Regístrate</a></p>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/inicio.js"></script>   
 </body>
 </html>
