--- a/pages/registro.html
+++ b/pages/registro.html
@@ -20,6 +20,7 @@
   </form>
   <p>Ya tenés una cuenta? <a id="login-link" href="../index.html">Inicia sesión aquí</a></p>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/registro.js"></script>
 </body>
 </html>
